<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETSP Tracker</string>
    <string name="tracking">Tracking</string>
    <string name="current_status">Current Status</string>
    <string name="selected_sensors">Selected Information:  </string>
    <string name="rate">Rate:  </string>
    <string name="mode">Mode:  </string>
    <string name="checkbox">CheckBox</string>
    <string name="sensors">Information</string>
    <string name="schedule">Schedule</string>
    <string name="time_interval">Time Interval</string>
    <string name="setup">Setup</string>
    <string name="Rate">Rate</string>
    <string name="Mode">Mode</string>
    <string name="SMS">SMS</string>
    <string name="GPRS">GPRS</string>
    <string name="not_started">Not Started</string>
    <string name="action_settings">Settings</string>
</resources>
