<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tracker_back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#99000000"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/tracking"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensors"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/listViewSensors"
                android:layout_width="wrap_content"
                android:layout_height="139dp"
                android:textColor="@color/white" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewPeriod"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.07"
                android:text="@string/time_interval"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextTimeInterval"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="right"
                android:inputType="number"
                android:labelFor="@+id/editTextTimeInterval"
                android:textColor="@color/black" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioButtonGSM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SMS"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButtonGPRS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPRS"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>